--- a/src/sass/introcard.scss
+++ b/src/sass/introcard.scss
@@ -1,1 +1,13 @@
 @import "variables";
+
+.indletter-wrapper {
+    overflow: hidden;
+}
+
+.indletter-item {
+    position: relative;
+}
+
+.intro-banner {
+    height: 183px;
+}
