styling and preview cards

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -27,5 +27,7 @@ body,
   padding: 0;
   margin: 0;
   overflow: hidden;
-  font-family: Merriweather;
+  font-family: lato;
+  background: $offblack;
+  color: $offwhite;
 }
