--- a/src/sass/previewcard.scss
+++ b/src/sass/previewcard.scss
@@ -6,6 +6,10 @@
     justify-content: center;
     align-items: center;
 
+    > * {
+        flex-shrink: 0;
+    }
+
     .inner {
         background: $offwhite;
         width: calcvw(440);
