--- a/src/sass/introcard.scss
+++ b/src/sass/introcard.scss
@@ -27,7 +27,7 @@
     justify-content: space-between;
     flex-direction: column;
     font-size: calcvw(144);
-
+    font-weight: bolder;
     .underline {
         position: relative;
         top: calcvw(-48);
