--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -24,6 +24,7 @@ $offblack: #242320;
 $offwhite: #e9edde;
 $black: #000;
 $ruby: #d81e5b;
+$darkblue: #4d5061;
 
 $previewWidth: 22.9167vw;
 $previewHeight: 30.7292vw;
